--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -10,13 +10,12 @@
           <div class="bread-inner">
             <div class="bread-menu">
               <ul>
-                <li><a href="index.html">خانه</a></li>
-                <li><a href="blog-grid.html">وبلاگ</a></li>
-                <li><a href="#">جزئیات وبلاگ</a></li>
+                <li><a href="{% url 'blog:blog-home' %}">خانه</a></li>
+                <li><a href="{% url 'blog:blog-home' %}">وبلاگ</a></li>
               </ul>
             </div>
             <div class="bread-title">
-              <h2>تک پست</h2>
+              <h2> {{posts.title}} </h2>
             </div>
           </div>
         </div>
@@ -31,104 +30,38 @@
     <div class="row">
       <div class="col-lg-8">
         <div class="blog-header">
-          <h1>وب سایت – سریعترین راه برای آنلاین کردن تجارت شما</h1>
+          <h1> {{posts.title}} </h1>
           <div class="row mt20 mb20">
             <div class="col-md-8 col-9">
               <div class="media">
                 <div class="user-image bdr-radius"><img src="{% static 'images/user-thumb/girl.jpg' %}" alt="girl"
                     class="img-fluid" /></div>
                 <div class="media-body user-info">
-                  <h5>توسط جان دی</h5>
-                  <p>2 دی 1401</p>
+                  <h5>توسط {{posts.author}}</h5>
+                  <p>{{posts.published_date.date}}</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 col-3">
-              <div class="postwatch"><i class="far fa-eye"></i> 120</div>
+              <div class="postwatch"><i class="far fa-eye"></i> {{posts.counted_view}}</div>
             </div>
           </div>
         </div>
         <div class="image-set"><img src="{% static 'images/blog/blog-post-1.jpg' %}" alt="blog images"
             class="img-fluid" /></div>
         <div class="blog-content mt30">
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی <strong>نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-              است.</strong> چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-            تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد
-            گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان
-            رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-          </p>
-          <h3 class="mt30 mb20">وب سایت – سریعترین راه برای آنلاین کردن تجارت شما</h3>
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی <strong>نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-              است.</strong> چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-            تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد
-            گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان
-            رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-          </p>
-          <h3 class="mt30 mb20">بنابراین، وب سایت چیست؟</h3>
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
-            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع
-            با هدف بهبود ابزارهای کاربردی می باشد.
-          </p>
-          <div class="image-set mt20 mb20"><img src="{% static 'images/blog/blog-post-2.jpg' %}" alt="blog images"
-              class="img-fluid" /></div>
-          <h3 class="mt30 mb20">ویژگی های ضروری یک وب سایت خوب</h3>
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
-            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع
-            با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه
-            و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ
-            پیشرو در زبان فارسی ایجاد کرد.
-          </p>
-          <h3 class="mt30 mb20">ویژگی های ضروری برای وب سایت های کسب و کار محلی</h3>
-          <ul class="ul-list mb30">
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-            <li>اطلاعات مهم تجاری</li>
-          </ul>
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="image-set mt20 mb20"><img src="{% static 'images/blog/blog-1.jpg' %}" alt="blog images"
-                  class="img-fluid" /></div>
-            </div>
-            <div class="col-lg-6">
-              <div class="image-set mt20 mb20"><img src="{% static 'images/blog/blog-2.jpg' %}" alt="blog images"
-                  class="img-fluid" /></div>
-            </div>
-          </div>
-          <h3 class="mt30 mb20">افزایش قرار گرفتن در معرض محلی</h3>
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
-            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع
-            با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه
-            و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ
-            پیشرو در زبان فارسی ایجاد کرد.
-          </p>
-          <blockquote class="rd-quote">
-            “لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .”
-          </blockquote>
-          <h3 class="mt30 mb20">نتیجه</h3>
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
-            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع
-            با هدف بهبود ابزارهای کاربردی می باشد.
+          <!-- Start TEXT -->
+          <p class="mt30 mb30">
+            {{posts.text_content}}
           </p>
 
           <div class="row">
             <div class="col-lg-8 col-md-8 mt30 mb30">
               <div class="blog-post-tag">
                 <span>برچسب های مرتبط</span>
-                <a href="#">طراحی</a>
-                <a href="#">بازاریابی</a>
-                <a href="#">سئو</a>
+                <a href="#">
+                  {{posts.category}}
+                </a>
               </div>
             </div>
             <div class="col-lg-4 col-md-4 mt30 mb30">
@@ -143,19 +76,20 @@
             </div>
           </div>
           <div class="row">
-
-            <div class="col-lg-6 col-md-6 mt30 mb30">
+            <!-- preives post -->
+            <!-- <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left ">
                 <span><a href="#">پست قبلی</a></span>
                 <h4><a href="#">توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها</a></h4>
               </div>
-            </div>
-            <div class="col-lg-6 col-md-6 mt30 mb30">
+            </div> -->
+            <!-- next post -->
+            <!-- <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left text-md-right">
                 <span><a href="#">پست بعدی</a></span>
                 <h4><a href="#">چگونه تحول دیجیتال جهان را تغییر داده است.</a></h4>
               </div>
-            </div>
+            </div> -->
           </div>
 
         </div>
@@ -164,7 +98,7 @@
             <div class="user-image"><img src="{% static 'images/user-thumb/girl.jpg' %}" alt="girl" class="img-fluid" />
             </div>
             <div class="media-body user-info">
-              <h5 class="mb10">جان دی</h5>
+              <h5 class="mb10"> {{posts.author}} </h5>
               <p>
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و
                 متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
@@ -279,20 +213,12 @@
             <div class="blog-categories">
               <ul>
                 <li>
-                  <a href="#">بیزینس <span class="categories-number">(2)</span></a>
+                  <a href="#">برنامه نویسی <span class="categories-number">(2)</span></a>
                 </li>
                 <li>
-                  <a href="#">مالی <span class="categories-number">(3)</span></a>
+                  <a href="#">لینوکس <span class="categories-number">(3)</span></a>
                 </li>
-                <li>
-                  <a href="#">متفرقه <span class="categories-number">(4)</span></a>
-                </li>
-                <li>
-                  <a href="#">طراحی وب <span class="categories-number">(3)</span></a>
-                </li>
-                <li>
-                  <a href="#">وردپرس <span class="categories-number">(5)</span></a>
-                </li>
+
               </ul>
             </div>
           </div>
@@ -301,18 +227,7 @@
           <div class="recent-post widgets mt60">
             <h3 class="mb30">برچسب های محبوب</h3>
             <div class="tabs">
-              <a href="#">طراحی وب</a>
-              <a href="#">طراحی</a>
-              <a href="#">طراحی گرافیک</a>
-              <a href="#">وبسایت</a>
-              <a href="#">بازاریابی</a>
-              <a href="#">برندینگ</a>
-              <a href="#">توسعه</a>
-              <a href="#">وب</a>
-              <a href="#">طراحی گرافیک</a>
-              <a href="#">وبسایت</a>
-              <a href="#">بازاریابی</a>
-              <a href="#">برندینگ</a>
+              <a href="#"> {{posts.category}} </a>
             </div>
           </div>
           <!--End Tags-->
