Edited summer description in home page

--- a/templates/blog_pages/blog-home.html
+++ b/templates/blog_pages/blog-home.html
@@ -12,7 +12,7 @@
 							<ul>
 								<!-- خانه  -->
 								<li><a href="index.html"> </a></li>
-								<li><a href="#"> نیواکس، اخبار تکنلوژی در یک نگاه </a></li>
+								<li> نیواکس، اخبار تکنلوژی در یک نگاه </li>
 
 							</ul>
 						</div>
