--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--website-favicon-->
-    <link href="{% static 'images/favicon.png' %}" rel="icon">
+    <!-- <link href="{% static 'images/favicon.png' %}" rel="icon"> -->
     <!--plugin-css-->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/plugin.min.css' %}" rel="stylesheet">
