--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -47,12 +47,11 @@
             </div>
           </div>
         </div>
-        <div class="image-set"><img src="{{posts.image.url}}" alt="blog images"
-            class="img-fluid" /></div>
+        <div class="image-set"><img src="{{posts.image.url}}" alt="blog images" class="img-fluid" /></div>
         <div class="blog-content mt30">
           <!-- Start TEXT -->
-          <p class="mt30 mb30">
-            <p></p>
+          <p>
+
             {{posts.text_content}}
             <br>
             <hr>
@@ -83,20 +82,25 @@
             </div>
           </div>
           <div class="row">
+
+
             <!-- preives post -->
-            <!-- <div class="col-lg-6 col-md-6 mt30 mb30">
+            <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left ">
                 <span><a href="#">پست قبلی</a></span>
                 <h4><a href="#">توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها</a></h4>
               </div>
-            </div> -->
+            </div>
             <!-- next post -->
-            <!-- <div class="col-lg-6 col-md-6 mt30 mb30">
+
+            <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left text-md-right">
                 <span><a href="#">پست بعدی</a></span>
                 <h4><a href="#">چگونه تحول دیجیتال جهان را تغییر داده است.</a></h4>
               </div>
-            </div> -->
+            </div>
+
+
           </div>
 
         </div>
