--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -88,7 +88,9 @@
             <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left ">
                 <span><a href="#">پست قبلی</a></span>
-                <h4><a href="#">توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها</a></h4>
+                <h4><a href="#">
+                  توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها
+                </a></h4>
               </div>
             </div>
             <!-- next post -->
@@ -96,7 +98,9 @@
             <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left text-md-right">
                 <span><a href="#">پست بعدی</a></span>
-                <h4><a href="#">چگونه تحول دیجیتال جهان را تغییر داده است.</a></h4>
+                <h4><a href="#">
+                  چگونه تحول دیجیتال جهان را تغییر داده است.
+                </a></h4>
               </div>
             </div>
 
