--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -82,28 +82,29 @@
             </div>
           </div>
           <div class="row">
-
-
+            {% if prev.id  %}
             <!-- preives post -->
             <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left ">
-                <span><a href="#">پست قبلی</a></span>
-                <h4><a href="#">
-                  توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها
-                </a></h4>
+                <span><a href="{% url 'blog:blog_single' pid=prev.id %}">پست قبلی</a></span>
+                <h4><a href="{% url 'blog:blog_single' pid=prev.id %}">
+                  {{prev.title}}
+
+                  </a></h4>
               </div>
             </div>
+            {% endif %}
+            {% if next.id  %}
             <!-- next post -->
-
             <div class="col-lg-6 col-md-6 mt30 mb30">
               <div class="post-navigation text-left text-md-right">
-                <span><a href="#">پست بعدی</a></span>
-                <h4><a href="#">
-                  چگونه تحول دیجیتال جهان را تغییر داده است.
-                </a></h4>
+                <span><a href="{% url 'blog:blog_single' pid=next.id %}">پست بعدی</a></span>
+                <h4><a href="{% url 'blog:blog_single' pid=next.id %}">
+                  {{next.title}}
+                  </a></h4>
               </div>
             </div>
-
+            {% endif %}
 
           </div>
 
