delete offer in single page
in left of single page

--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -187,9 +187,9 @@
       <div class="col-lg-4">
         <div class="sidebar">
           <!--Start block for offer/ads-->
-          <div class="offer-image">
+          <!-- <div class="offer-image">
             <img src="{% static 'images/blog/strategy-guide.jpg' %}" alt="offer" class="img-fluid" />
-          </div>
+          </div> -->
           <!--End block for offer/ads-->
           <!--Start Recent post-->
           <div class="recent-post widgets mt60">
