Just Create a simple Template Tag

--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load blog_tag %}
 {% block content %}
 <!--Breadcrumb Area-->
 <section class="breadcrumb-area banner-2">
