Write code for print text with template tag

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,3 +1,4 @@
+{% load blog_tag %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,8 +10,8 @@
 <body>
     <h2>Everythings you add in you add in Url after blog can see here!</h1>
     <p></p>
-    {{pid}}
+    This is a: {% hello %}
     <br>
-    {{nameurls}}
+    
 </body>
 </html>
