send a value and return with template tag

--- a/templates/test.html
+++ b/templates/test.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Everythings you add in you add in Url after blog can see here!</h1>
     <p></p>
-    This is a: {% hello %}
+    This is a: {% funplus 2 %}
     <br>
     
 </body>
