--- a/templates/blog_pages/blog-latest-news.html
+++ b/templates/blog_pages/blog-latest-news.html
@@ -1,31 +1,23 @@
 {% load static %}
 <div class="recent-post widgets mt60">
     <h3 class="mb30">اخبار جدید</h3>
+    <!--Start-->
+    {% for post in posts %}
     <div class="media">
       <div class="post-image bdr-radius">
-        <a href="#"><img src="{% static 'images/blog/blog-small.jpg' %}" alt="girl" class="img-fluid" /></a>
+        <a href="{% url 'blog:blog_single' pid=post.id %}"><img src="{{post.image.url}}" alt="girl" class="img-fluid" /></a>
       </div>
       <div class="media-body post-info">
-        <h5><a href="#">توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها</a></h5>
-        <p>2 دی 1400</p>
+        <h5><a href="{% url 'blog:blog_single' pid=post.id %}">
+          {{post.title |truncatewords:4}}
+        </a></h5>
+        <p>
+          {{post.published_date|date:"Y/m/d"}}
+        </p>
       </div>
     </div>
-    <div class="media">
-      <div class="post-image bdr-radius">
-        <a href="#"><img src="{% static 'images/blog/blog-small2.jpg' %}" alt="girl" class="img-fluid" /></a>
-      </div>
-      <div class="media-body post-info">
-        <h5><a href="#">توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها</a></h5>
-        <p>2 دی 1400</p>
-      </div>
-    </div>
-    <div class="media">
-      <div class="post-image bdr-radius">
-        <a href="#"><img src="{% static 'images/blog/blog-small.jpg' %}" alt="girl" class="img-fluid" /></a>
-      </div>
-      <div class="media-body post-info">
-        <h5><a href="#">توسعه برنامه بازار سهام - زمان، هزینه، ویژگی ها</a></h5>
-        <p>2 دی 1400</p>
-      </div>
-    </div>
+    <!--end-->
+    <br>
+    {% endfor %}
+    
   </div>
