changed name lasted post

--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -193,7 +193,7 @@
 
           <!--Start Recent post-->
           {% load blog_tag %}
-          {% bloglatest 4 %}
+          {% mylastpost 4 %}
           <!--Start Recent post-->
 
           <!--Start Blog Category-->
